style.css
html, body {
    height: 100%;
}

@-moz-keyframes spin { 100% { -moz-transform: rotate(360deg); } }
@-webkit-keyframes spin { 100% { -webkit-transform: rotate(360deg); } }
@keyframes spin { 100% { -webkit-transform: rotate(360deg); transform:rotate(360deg); } }


#loading-indicator {
    position: absolute;
    background-color: rgba(255, 255, 255, 0.9);
    padding: 15px 18px;
    z-index: 999;
    border: 1px solid #FFF;
    box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.5);
    display: none;
}
#class-select {
  display: none;
}
#deck-builder {
  display: none;
}

#loading-indicator span {
  -webkit-animation: spin 2s linear infinite;
  -moz-animation: spin 2s linear infinite;
  animation: spin 2s linear infinite;
}
.deck-item {
  display: block;
}

#card-list-header {
  background: rgb(255,255,255);
  z-index: 50;
}
.fixed {
  position: fixed;
}
#card-list-header.fixed {
  top: 0;
  left: 0;
}
#deck-area.fixed {
  top: 0;
  right: 0;
}

.list-header {
  display: none;
}
.card-list-section:after {
  content: " ";
  display: block; 
  height: 0; 
  clear: both;
}
.deck-count {
  position: absolute;
  right: 0;
  bottom: 0;
  margin: 0 5%;
  font-size: 14px;
  width: 90%;
  color: #fff;
  display: none;
  z-index: 50;
  background: #999;
  padding: 1% 0;
}
#search-clear {
  position: absolute;
  right: 5px;
  top: 0;
  bottom: 0;
  height: 14px;
  margin: auto;
  font-size: 14px;
  cursor: pointer;
  color: #ccc;
  display: none;
  z-index: 3;
}
#no-results {
  display: none;
}

